# GMA

ex1/: CMakeLists.txt  test.txt
ex1/inc/: lib.h
ex1/src/: get_dest_data.cpp  main.cpp
ex2/: CMakeLists.txt
ex2/inc/: Dollar.hpp  lib.h
ex2/src/: Dollar.cpp  main.cpp
ex3/: 111  CMakeLists.txt
ex3/inc/: Case.hpp  Chest.hpp  TreasureHunter.hpp
ex3/src/: Case.cpp  Chest.cpp  TreasureHunter.cpp  main.cpp
